[gd_scene load_steps=6 format=2]

[ext_resource path="res://Shop/ProductDoubleJump.gd" type="Script" id=1]
[ext_resource path="res://Props/tileset.png" type="Texture" id=2]
[ext_resource path="res://Fonts/FontResource.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sound/upgrade.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 64, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -50.0
margin_right = 49.5
margin_bottom = -20.0
custom_fonts/font = ExtResource( 3 )
text = "Double Jump
(3 Coins)"
align = 1
valign = 1

[node name="PurchaseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
